crates/knok/tests/ui/mlir_model_string_backend.stderr
error: backend must be a path such as Backend::LlvmCpu or knok::Backend::LlvmCpu
 --> tests/ui/mlir_model_string_backend.rs:4:14
  |
4 |     backend: "llvm-cpu",
  |              ^^^^^^^^^^
